Fixed Navbar being invisible

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,7 +19,7 @@
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --navbar-docs-primary: #180f1c;
-  --mainnav-mainnav-footer-background: #1c1221;
+  --mainnav-footer-background: #1c1221;
   user-select: none
 }
 
